@@ -1,14 +1,18 @@
+// src/main/java/com/suportflow/backend/config/SecurityConfig.java
 package com.suportflow.backend.config;
 
+import com.suportflow.backend.repository.ClienteRepository;
+import com.suportflow.backend.repository.UserRepository;
 import com.suportflow.backend.security.JwtAuthenticationFilter;
+import com.suportflow.backend.service.auth.ClienteDetailsService;
 import com.suportflow.backend.service.auth.UserDetailsServiceImpl;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -21,13 +25,13 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
 import java.util.Arrays;
 import java.util.List;
+import com.suportflow.backend.service.auth.AuthenticationHelper;
 
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity
+@EnableMethodSecurity // Enables @PreAuthorize, @PostAuthorize, etc.
 public class SecurityConfig {
 
     @Autowired
@@ -37,6 +41,9 @@ public class SecurityConfig {
     private UserDetailsServiceImpl userDetailsService;
 
     @Autowired
+    private ClienteDetailsService clienteDetailsService;
+
+    @Autowired
     private PasswordEncoder passwordEncoder;
 
 
@@ -44,25 +51,31 @@ public class SecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) //Adicionado o corsConfigurationSource
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/api/users/register").permitAll() // Permite o registro
-                        .requestMatchers("/h2-console/**").permitAll() // Permite o console do H2 (apenas para desenvolvimento!)
-                        .anyRequest().authenticated()
+                        .requestMatchers("/api/auth/**").permitAll() // Allow all requests to /api/auth/...
+                        .requestMatchers("/h2-console/**").permitAll()  // Allow access to H2 console (for development)
+                        .requestMatchers("/api/clientes/**").authenticated() // Secure all Cliente endpoints
+                        .requestMatchers("/api/chamados/**").authenticated() // Secure all Chamados endpoints
+                        .requestMatchers("/api/permissoes/**").authenticated() // Secure all permissoes endpoints
+                        .anyRequest().authenticated() // All other requests require authentication
                 )
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authenticationProvider(authenticationProvider())
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Use stateless sessions
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class); // Add JWT filter
 
-        // Configuração para o H2 Console (apenas para desenvolvimento!)
-        http.headers(headers -> headers.frameOptions(frameOptions -> frameOptions.disable()));
+        http.headers(headers -> headers.frameOptions(frameOptions -> frameOptions.disable())); // Disable frame options (for H2 console)
 
         return http.build();
     }
 
+    // Remove @Autowired here!
+    public void configureGlobal(AuthenticationManagerBuilder auth) throws Exception {
+        auth.authenticationProvider(userAuthenticationProvider())
+                .authenticationProvider(clienteAuthenticationProvider());
+    }
+
     @Bean
-    public AuthenticationProvider authenticationProvider() {
+    public AuthenticationProvider userAuthenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
         authProvider.setUserDetailsService(userDetailsService);
         authProvider.setPasswordEncoder(passwordEncoder);
@@ -70,20 +83,33 @@ public class SecurityConfig {
     }
 
     @Bean
+    public AuthenticationProvider clienteAuthenticationProvider() {
+        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+        authProvider.setUserDetailsService(clienteDetailsService);
+        authProvider.setPasswordEncoder(passwordEncoder);
+        return authProvider;
+    }
+    @Bean
+    public AuthenticationHelper authenticationHelper(
+            UserRepository userRepository,
+            ClienteRepository clienteRepository,
+            PasswordEncoder passwordEncoder) {
+        return new AuthenticationHelper(userRepository, clienteRepository, passwordEncoder);
+    }
+
+    @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
-     // Configuração do CORS (Cross-Origin Resource Sharing)
-        @Bean
-        CorsConfigurationSource corsConfigurationSource() {
-            CorsConfiguration configuration = new CorsConfiguration();
-            configuration.setAllowedOrigins(List.of("*")); // Permite todas as origens (NÃO RECOMENDADO PARA PRODUÇÃO!)
-            configuration.setAllowedMethods(Arrays.asList("GET","POST", "PUT", "DELETE", "OPTIONS", "PATCH")); // Métodos permitidos
-            configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type")); // Headers permitidos
-           // configuration.setAllowCredentials(true); // Permitir credenciais (cookies, etc.) - Se necessário
-            UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-            source.registerCorsConfiguration("/**", configuration); // Aplica a configuração a todos os endpoints
-            return source;
-        }
+    @Bean
+    CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 }
